2007-05-14  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (RenameClass): Handle renaming of structs,
	enums, and interfaces too.

2007-05-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Include const fields in the static field list.
	  Fixes bug #81078.
	* CSharpBinding.mds, gtk-gui/gui.stetic: Updated.

2007-05-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: (GetPreviousToken): Return tokens
	  composed by a single char which is not a letter of digits.

2007-05-14  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs: Comment out our own implementation of
	AddMember, throwing a NotImplementedException() in generated code
	can be annoying sometimes.

2007-05-14  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Don't use the MD namespace in add-in
	  dependencies, since the c# add-in is alread declared in the MS
	  namespace.

2007-05-11  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (AddMember): Override default
	implementation so that we can add a statement to throw a
	NotImplementedException.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mds: Added new c# binding solution.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Autotools/Autotools.mdp, Autotools/Makefile.am: Added project for the
	  autotools assembly.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Don't copy assembly references.

2007-05-08  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (GetMemberNamePosition): Fixed to
	support IIndexers.
	(FindParameterReference): Updated for API changes, no longer takes
	an IMethod argument.
	(Visit): Fixed up a bit since params can be parented by either an
	IMethod or an IIndexer.

2007-05-04  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (GetParameterNamePosition): Implemented.

	* Parser/Resolver.cs (GetMethod): Check if the cursor is within the